force-app/main/default/objects/Payroll_Entry__c/Payroll_Entry__c.object-meta.xml
<CustomObject>
  <label>Payroll Entry</label>
  <pluralLabel>Payroll Entries</pluralLabel>
  <nameField>
    <label>PRE Number</label>
    <type>AutoNumber</type>
    <displayFormat>PRE-{0000}</displayFormat>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>