force-app/main/default/objects/Payroll_Entry__c/fields/Deductions__c.field-meta.xml
<CustomField>
  <fullName>Deductions__c</fullName>
  <label>Deductions</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>