force-app/main/default/objects/Payroll_Entry__c/fields/Gross_Pay__c.field-meta.xml
<CustomField>
  <fullName>Gross_Pay__c</fullName>
  <label>Gross Pay</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>