force-app/main/default/objects/Payroll_Entry__c/fields/OT_Hours__c.field-meta.xml
<CustomField>
  <fullName>OT_Hours__c</fullName>
  <label>OT Hours</label>
  <type>Number</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>