force-app/main/default/objects/Payroll_Entry__c/fields/Pay_Status__c.field-meta.xml
<CustomField>
  <fullName>Pay_Status__c</fullName>
  <label>Pay Status</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
    <value>
      <fullName>Calculated</fullName>
    </value>
    <value>
      <fullName>Paid</fullName>
    </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>