force-app/main/default/objects/Payroll_Entry__c/fields/Payroll__c.field-meta.xml
<CustomField>
  <fullName>Payroll__c</fullName>
  <label>Payroll</label>
  <type>MasterDetail</type>
  <referenceTo>Payroll__c</referenceTo>
  <relationshipName>PayrollEntries</relationshipName>
  <relationshipLabel>Payroll</relationshipLabel>
  <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>