force-app/main/default/objects/Payroll_Entry__c/fields/Taxes__c.field-meta.xml
<CustomField>
  <fullName>Taxes__c</fullName>
  <label>Taxes</label>
  <type>Currency</type>
  <precision>16</precision>
  <scale>2</scale>
</CustomField>