force-app/main/default/objects/Payroll_Entry__c/fields/Timesheet__c.field-meta.xml
<CustomField>
  <fullName>Timesheet__c</fullName>
  <label>Timesheet</label>
  <type>Lookup</type>
  <referenceTo>Timesheet__c</referenceTo>
  <relationshipName>PayrollEntriesByTimesheet</relationshipName>
  <relationshipLabel>Timesheet (Lookup)</relationshipLabel>
</CustomField>